crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_block_gas_limit_enforced_with_state_gas.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&result_fits"
---
{
  "Success": {
    "reason": "Stop",
    "gas": {
      "gas_spent": 233106,
      "state_gas_spent": 200000,
      "gas_refunded": 0,
      "floor_gas": 12000,
      "reservoir_remaining": 0
    },
    "logs": [],
    "output": {
      "Call": "0x"
    }
  }
}
